[package]
name = "loot-o-tron"
version = "0.1.0"
authors = ["Nicolas Mohr <Nico.Mohr@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.2.0", features = ["full"] }
reqwest = "0.11"
serde = {version = "1.0", features = ["derive"]}
quick-xml = { version = "0.21.0", features = ["serialize"]}